--- a/index.html
+++ b/index.html
@@ -1,12 +1,21 @@
-<!DOCTYPE html>
-<html>
-<head>
-<title>Page Title</title>
-</head>
-<body>
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Dice Roller</title>
+        <link rel="stylesheet" href="index.css">
+        <script src="index.js"></script>
+    </head>
+    <body onload="RollSixSidedDice()">
+        <h1>Dice Roller Minigame</h1>
 
-<h1>Matthew Espinos</h1>
-<p>This is a paragraph.</p>
+        <p class="bold">This website generates 5 seperate 6-sided fair dice rolls. You can refresh the page, hit the "Roll Dice" button, or press the "enter" key on your keyboard
+            to reroll the dice.
+        </p>
 
-</body>
+        <button type="button" autofocus onclick="RollSixSidedDice()">Roll Dice</button><br><br>
+        
+        Dice Rolls: <input id="dice" type="text" value="" size="10" disabled><br><br> 
+
+    </body>
 </html>
